
[v1.1.2p1]
 ! API: Added method "isEnabled" to ExpandableToolbarItem and all associated listeners.
 - API: ToolbarItemDockable.isEnabled now returns false if there is no ToolbarItem to show in some state
 - API: Toolbar/ToolbarContainer/ToolbarGroupDockStation now all support custom background painting (with keys ThemeManager.BACKGROUND_PAINT + ".station.toolbar"/".station.toolbar.container"/".station.toolbar.group")
 - Bugfix: Sometimes a child of a ScreenDockStation could not be moved by the WindowMover because the DockRelocator consumed the MouseEvents.
 - API: The DefaultExpandableToolbarItemStrategy is now set as default, meaning expanded-toolbar-items are now available per default.

[v1.1.2p1a]
 - API: WizardSplitDockStation has a new property "resizeOnRemove", if set the size of a column is automatically reset if one of its children is removed
 - Bugfix: WizardSplitDockStation sometimes did not allow moving the divider if the internal tree of Dockables had placeholders at the wrong locations
 - API: AbstractScreenDockWindow will call checkWindowBounds if the minimum size of its content changes.
 - Bugfix: When removing a Dockable from a column of a WizardSplitDockStation, the column kept its current size *including* the size of the Span
 - Bugfix: Moving a Dockable from one column of a WizardSplitDockStation to another now updates the size of the column from which the Dockable was removed.
 - Bugfix: Layout of ToolbarGroupDockStation could not be properly saved. 
 - Bugfix: GlassedPane does no longer re-send a MouseEvent that it already has sent. This could happen if a MouseListener was added to a JFrame, but the MouseListener did not consume the MouseEvent.

[v1.1.2p1b]
 - API: when removing a Dockable from a StackDockStation, the station tries to be more intelligent with selecting the next focused Dockable: it uses the FocusHistory instead of just selecting the "index+1'th" tab.
     
[Todo]
- Drop StackDockStation over Dockable and merge them